test: IFE-477: remove -XX:MaxPermSize=256m option from surefire argline